tests/paczka1/fuzzy1/47504381.err
Error in line 2: S20 A323 28,6
Error in line 6: S20 A821 53,9
Error in line 9: zOkPKM9 A994 20,5
Error in line 24: XphW9D6zjJE A323 91,9
Error in line 32: S20 A821 4,3
Error in line 40: XphW9D6zjJE A821 80,82
